# iBot

./: README.MD  iBot_v1.ttt
Plugins/: CMakeLists.txt  actions.cpp  actions.h  arm.cpp  arm.h  base.h  body.cpp  body.h  chassis.cpp  chassis.h  common.cpp  common.h  coppelia_interface.cpp  coppelia_interface.h  coppeliasim_interface.cpp  coppeliasim_interface.h  differential_chassis.cpp  differential_chassis.h  motor.cpp  motor.h  sim_main.cpp  sim_main.h  test  test.cpp  three_part_body.cpp  three_part_body.h  two_dof_arm.cpp  two_dof_arm.h
Plugins/include/: sim_data.h  sim_main.h
Plugins/src/: sim_data.cpp  sim_main.cpp  sim_plugin.cpp
